--- a/ProductMiddlewareAPI/appsettings.json
+++ b/ProductMiddlewareAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiSettings": {
+    "ProductApiUrl": "https://dummyjson.com/products"
+  }
 }
